tests/models/struct/unnamed/isize/pass/le.rs
use dade::model;
#[model]
struct TestModel (
   #[field(le = 2)]
    isize
);
fn main() {}
